--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
      <iframe id="overlay_2068_player" src="https://www.youtube.com/embed/z5tugxy70MY" frameborder="0" allowfullscreen></iframe>  
 </div>
 
-    <article class="wrapper_home_landing container_fluid">
+    <article class="full_size container_fluid">
         <div  class="overlay_black">
         </div>      
         <div class="overlay_img"></div>
@@ -31,7 +31,7 @@
 
 
 
-<article class="container_fluid bgt1" id="wrapper_diensten"> 
+<article class="container_fluid bgt1 full_width padding-bottom8" id="wrapper_diensten"> 
         <div class="wrap_vert">
             <div class="wrap_hor">
             <h3>Digitale Transformatie</h3>
@@ -67,7 +67,7 @@
 
 </article>
 
-<article class="container_fluid wrapper_home bgt2" id="wrapper_klant_ervaring">              
+<article class="container_fluid full_width bgt2" id="wrapper_klant_ervaring">              
     
             <figure onmousedown="toggleOverlay()" class="affoe1 pull-left">    
             <%= image_tag('ytIMG.jpg', class: "full_size_img")%>
@@ -87,7 +87,7 @@
 </article>
 
 
-<article class="container_fluid wrapper_home bgt1" id="wrapper_blog">              
+<article class="container_fluid full_width bgt1" id="wrapper_blog">              
     
             <figure class="affoe1 pull-right">
 
@@ -110,7 +110,7 @@
 
 <hr class="col-centered" style="height: 0.1em; width: 85%; opacity: 0.4;">
 
-<article class="container_fluid wrapper_home bgt2" id="wrapper_over_ons">              
+<article class="container_fluid full_width bgt2" id="wrapper_over_ons">              
     
             <figure class="affoe1 pull-left">
 
