--- a/app/views/shared/_contactform.html.erb
+++ b/app/views/shared/_contactform.html.erb
@@ -25,17 +25,17 @@
 
             <div class="row1">
                 <%= message_form.label :name, 'Naam:'%><br>
-                <%= message_form.text_field :name, class:"full_width black"%>
+                <%= message_form.text_field :name, class:"full_width"%>
             </div>
                                 
             <div class="row1">
                 <%= message_form.label :email, 'E-mail:'%><br>
-                <%= message_form.email_field :email, class:"full_width black" %>
+                <%= message_form.email_field :email, class:"full_width" %>
             </div>
 
             <div class="field">
                 <%= message_form.label :Message, 'Bericht:'%><br>
-                <%= message_form.text_area :content, class: "full_width heightBox black" %>
+                <%= message_form.text_area :content, class: "full_width heightBox" %>
             </div><br>
                           
             <div class="field black">
