--- a/app/views/shared/_sub_form.html.erb
+++ b/app/views/shared/_sub_form.html.erb
@@ -7,10 +7,10 @@
 
                         
         <%= subscribe_form.label :name, 'Name:'%><br>
-        <%= subscribe_form.text_field :name, class: "full_width black" %><br>
+        <%= subscribe_form.text_field :name, class: "full_width" %><br>
 
         <%= subscribe_form.label :email, 'E-mail:'%><br>
-        <%= subscribe_form.text_field :email, class: "full_width black" %><br>
+        <%= subscribe_form.text_field :email, class: "full_width" %><br>
                       
         <%= subscribe_form.submit "Send", class: "black" %><br>
                       
