--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -2,8 +2,7 @@
 
               
 
-	<article class="wrapper_home_landing container_fluid">
-        <div class="overlay_white"></div>      
+	<article class="full_size container_fluid">
 
         <div class="row container_home_landing place_middle">
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 col-centered">
