--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -9,9 +9,9 @@
                 <%= image_tag(@article.image.url(:large))%>
             </figure>
         </div> 
-<article class="container_fluid test_wrap" id="wrapper_diensten"> 
+<article class="container_fluid test_wrap padding-bottom8"> 
 
-        <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 h50 fixed_blog zp1"><br><br><br><br><br>
+        <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 h50p1 fixed_blog"><br><br><br><br><br>
         <div class="container_social_share">
             <%= social_share_button_tag(@article.title, :popup => "true", class: "social_share_shift") %></div>
         </div>
@@ -45,7 +45,7 @@
         <div class="col-lg-4 col-md-4 col-sm-5 col-xs-11 col-lg-offset-0 col-md-offset-0 col-sm-offset-0 col-xs-offset-1">
             <div class="subscribe_container bgb">
                 <h1 class="white alignright">Subscribe voor Exclusieve content.</h1>
-                <div class="white subform_wrapper"><%=render('sub_form')%><br></div>
+                <div class="white subform_wrapper"><%=render('shared/sub_form')%><br></div>
             </div>
                 <ul class="social_links">
                     <li class="sm_list"><button class="sm_button_bw"><%= link_to image_tag("icon_bw_tw.png"), 'https://www.twitter.com' %></button></li>
@@ -57,7 +57,7 @@
             <div class="must_read_container">
                 <h2 class="alignright">Must Read!</h2>
                 <figure></figure>
-                <h3 class="black">Test Titel</h3>
+                <h3 >Test Titel</h3>
                 <hr>
                 <p>Dit artikel gaat over blablabla</p>  
 
