--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -1,6 +1,6 @@
 <%= render 'shared/navbar/navbarNormal' %>
 
-<article class="wrapper_home_landing container_fluid">
+<article class="full_size container_fluid">
     
         <div class="overlay_img_diensten"></div>
         <div  class="overlay_black" style="opacity: 0.3">
@@ -58,7 +58,7 @@
 
 <hr class="col-centered" style="height: 0.1em; width: 85%; opacity: 0.8;">
 
-<article class="container_fluid col-12 wrapper_home wrap_vert wrap_hor bgt1" id="wrapper_business_trans">   
+<article class="container_fluid col-12 full_width wrap_vert wrap_hor bgt1" id="wrapper_business_trans">   
     
         <div class="row" >
 
@@ -100,7 +100,7 @@
 </article>
 <hr class="col-centered" style="height: 0.1em; width: 85%; opacity: 0.8;">
 
-<article class="container_fluid col-12 wrapper_home wrap_vert wrap_hor bgt2" id="wrapper_customer_exp">   
+<article class="container_fluid col-12 full_width wrap_vert wrap_hor bgt2" id="wrapper_customer_exp">   
         <div class="row ">
 
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -142,7 +142,7 @@
 
 <hr class="col-centered" style="height: 0.1em; width: 85%; opacity: 0.8;">
 
-<article class="container_fluid col-12 wrapper_home wrap_vert wrap_hor bgt1" id="wrapper_gevonden_worden">   
+<article class="container_fluid col-12 full_width wrap_vert wrap_hor bgt1" id="wrapper_gevonden_worden">   
         <div class="row ">
 
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
