--- a/app/views/shared/_normalfooter.html.erb
+++ b/app/views/shared/_normalfooter.html.erb
@@ -23,7 +23,7 @@
                 </li>                                              
             </ul>
 
-            <div class="row mp footerlist">  
+            <div class="row margin_padding_footer footerlist">  
             <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
                 <h6 class="col-lg-12 col-md-12 col-sm-12 col-xs-12"> Check ons!</h6>
                 <ul class="col-lg-12 col-md-12 col-sm-12 col-xs-12 list-unstyled">
