--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -7,10 +7,10 @@
 </div>
 
 
-<article class="container_fluid test_wrap2" id="wrapper_diensten"> 
+<article class="container_fluid test_wrap2 padding-bottom8"> 
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
-        <div class="row max_full_width">
+        <div class="row full_width col-centered">
 
 
             <div class="col-lg-8 col-md-7 col-sm-12 col-xs-12 overlay_figure" onmousedown="toggleOverlay()">
@@ -49,7 +49,7 @@
         <div class="col-lg-4 col-md-5 col-sm-12 col-xs-12 ">
             <div class="subscribe_container bgb">
                 <h1 class="white alignright">Subscribe voor Exclusieve content.</h1>
-                <div class="white subform_wrapper"><%=render('sub_form')%><br></div>
+                <div class="white subform_wrapper"><%=render('shared/sub_form')%><br></div>
             </div>
                 <ul class="social_links">
                     <li class="sm_list"><button class="sm_button_bw"><%= link_to image_tag("icon_bw_tw.png"), 'https://www.twitter.com' %></button></li>
@@ -68,7 +68,7 @@
 
 
 <div class="container-fluid">
-        <div class="row wrap_stories" >
+        <div class="row padding-bottom8 full_width col-centered" >
             <% @stories.each do |story| %>
                 <div class="col-lg-3 col-md-4 col-sm-5 col-sm-offset-1 col-xs-12 container_story overlay_figure">
                     
