--- a/app/views/shared/_normalfooter.html.erb
+++ b/app/views/shared/_normalfooter.html.erb
@@ -3,30 +3,36 @@
 
 <div class="container-fluid" id="wrapper_inner_footer" >
             <ul class="row mp footerlist">  
-                <li class="col-lg-1 col-md-1 col-sm-2 col-xs-12 footeritem">
+                <li class="col-lg-2 col-md-2 col-sm-2 col-xs-12 footeritem">
                     <%=link_to 'Home', root_path, class: "silverHover"%>
                 </li>
-                <li class="col-lg-1 col-md-1 col-sm-2 col-xs-12 footeritem">
+                <li class="col-lg-2 col-md-2 col-sm-2 col-xs-12 footeritem">
                     <%=link_to 'Diensten', services_path, class: "silverHover"%>
                </li>       
-                <li class="col-lg-1 col-md-1 col-sm-2 col-xs-12 footeritem">
+                <li class="col-lg-2 col-md-2 col-sm-2 col-xs-12 footeritem">
                     <%=link_to 'Blog', articles_path, class: "silverHover" %>
                 </li>     
-                <li class="col-lg-1 col-md-1 col-sm-2 col-xs-12 footeritem">
+                <li class="col-lg-2 col-md-2 col-sm-2 col-xs-12 footeritem">
                     <%=link_to 'Cases', stories_path, class: "silverHover" %>
                 </li>  
-                <li class="col-lg-1 col-md-1 col-sm-2 col-xs-12 footeritem">
+                <li class="col-lg-2 col-md-2 col-sm-2 col-xs-12 footeritem">
                     <%= link_to "Over ons", pages_over_ons_path, class: "silverHover" %>
                 </li>          
-                <li class="col-lg-1 col-md-1 col-sm-2 col-xs-12 footeritem">
+                <li class="col-lg-2 col-md-2 col-sm-2 col-xs-12 footeritem">
                     <%= link_to "Contact", anchor: "wrapper_contact"%>
                 </li>                                              
             </ul>
 
             <div class="row margin_padding_footer footerlist">  
-            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+
+                <div class="col-lg-6 col-md-6 col-sm-6">
+                <div class="white subform_wrapper"><%=render('shared/sub_form_inline')%><br></div>
+                </div>  
+
+
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                 <h6 class="col-lg-12 col-md-12 col-sm-12 col-xs-12"> Check ons!</h6>
-                <ul class="col-lg-12 col-md-12 col-sm-12 col-xs-12 list-unstyled">
+                <ul class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <li class="col-lg-3 col-md-3 col-sm-3 col-xs-3 footeritem">
                     <button class="sm_button_bw"><%= link_to image_tag("icon_wb_tw.png"), 'https://www.twitter.com' %></button>
                 </li>
@@ -46,10 +52,7 @@
             </div>
 
 
-                <div class="col-lg-6 col-lg-offset-3 col-md-7  col-md-offset-2 col-sm-7 col-sm-offset-1 col-xs-12">
-                <h6 class="white">Subscribe voor Exclusieve content.</h6>
-                <div class="white subform_wrapper"><%=render('shared/sub_form_inline')%><br></div>
-                </div>  
+
             </div>
         </div>            
 
