--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -19,14 +19,29 @@
 </article>
 
 
-<article class="container_fluid subform_wrapper bgt2 wrap_vert">   
+<article class="container full_width bgt1 headlines_wrap">
+<h2 class="headlines">De wereld anno 2016</h2>
 
+<figure class="col-lg-10  col-md-12 col-sm-12 col-centered hidden-xs" "><br><br><br><%= image_tag('trends1_2.png', class: "full_size")%></figure>
+</div>
+
+<figure class="hidden-lg hidden-md hidden-sm"><<%= image_tag('trends22.png', class: "full_size")%></figure>
+
+
+
+</article>
+
+
+<article class="container_fluid bgt4">   
+<div class="subform_wrapper wrap_vert">
         <div class="row">
             <div class="col-lg-2 col-md-3 col-sm-12 col-xs-12">
-            <h3 class="h3_diensten">Wat is Digital?</h3><hr class="hrrood">
+            <h5 class="h3_diensten">De waarde van digital</h5><hr class="hrrood">
             </div>
             <div class="col-lg-10 col-md-9 col-sm-12 col-xs-12">
-                <p class="defining_digital_paragraph part_of_section text_shade">Digitale Transformatie betekent voor elk bedrijf iets anders. Traditionele bedrijven bevinden zich in industrien, waar men veronderstelt dat er snel geschakeld wordt. In de praktijk zijn er in elke industrie voorbeelden van bedrijven aan te wijzen die sinds het digitale tijdperk naar de top zijn gerezen. Wij helpen onze klanten digitale leiders worden. De digitale strategie is door de opkomst van het internet en Social Media drastisch veranderd. Wij helpen u een eigen strategie ontwikkelen om in het nieuwe vaarwater te manoevreren.</p>
+                <p class="text_shade">
+                De laatste jaren was er een record hoogte aantal faillissementen bereikt. Zelfs giganten als de V&D zijn gesneuveld door niet te innoveren. Toch zijn er voorbeelden de vinden van bedrijven die de markt hebben veroverd zoals Bol.com, Coolblue en Facebook. Door strategisch gebruik te maken van de nieuwe mogelijkheden zijn dergelijke bedrijven hun concurrentie te slim af. 
+                </p>
             </div>
         </div>
 
@@ -34,38 +49,37 @@
 
         <div class="row" >
             <div class="col-lg-2 col-md-3 col-sm-12 col-xs-12">
-            <h3 class="h3_diensten">Digitale Transformatie</h3><hr class="hrrood">
+            <h5 class="h3_diensten">Twee soorten Innovatie</h5><hr class="hrrood">
             </div>
             <div class="col-lg-10 col-md-9 col-sm-12 col-xs-12">
-            <p class="defining_digital_paragraph part_of_section text_shade">De communicatie tussen bedrijf en klant is tegenwoordig volledig anders. Er is geen moment dat je niet in contact staat of kunt staan met uw klanten. Wij helpen u een master storyteller te worden om uw klanten aan te trekken. Het bereik dat je hebt is oneindig groot. De mogelijkheid om jouw message naar buiten toe uit te dragen is er altijd. Wij helpen onze klanten een eigen identiteit te ontwikkelen.</p>          
+            <p class="defining_digital_paragraph part_of_section text_shade">Door de tweets, video's en posts staat de communicatie tussen onderneming en klant op z´n kop. Wij helpen u diepere en langdurige relaties met uw klanten op te bouwen. Innoveren in het bedrijfsproces draait om inefficienties verwijderen. Wij onderzoeken welke processen geatomatiseerd kunnen worden en welke systemen verjaard zijn. Wij zoeken naar online kanalen om omzet te genereren. </p>          
             </div>
         </div>
 
 <br>
         <div class="row" >
             <div class="col-lg-2 col-md-3 col-sm-12 col-xs-12">
-            <h3 class="h3_diensten"> uw Digitale Partner</h3><hr class="hrrood">
+            <h5 class="h3_diensten"> uw Digitale Partner</h5><hr class="hrrood">
             </div>
             <div class="col-lg-10 col-md-9 col-sm-12 col-xs-12">
-                <p class="defining_digital_paragraph part_of_section text_shade">Aan het eind van de dag draait het allemaal om verkopen. Wij begrijpen dat, en dat er ook een moment komt om de trigger over te halen en tot de verkoop over te gaan. Wij helpen onze klanten succesvolle internet campagnes op te zetten op een strategische wijze.</p>            
+                <p class="defining_digital_paragraph part_of_section text_shade">30% van de ondernemingen blijft achter door een gebrek aan kennis. Als uw partner zorgen wij dat u daar niet bij hoort. Door u te adviseren qua strategie en klantrelaties helpen wij u uw doelen te behalen. Bovendien bezitten wij expertise op het gebied van online of social media marketing campagnes. </p>            
             </div>
         </div>
         
 
 
     <div class="clearfix"></div>
+    </div>
 </article>
 
-<hr class="col-centered" style="height: 0.1em; width: 85%; opacity: 0.8;">
-
-<article class="container_fluid col-12 full_width wrap_vert wrap_hor bgt1" id="wrapper_business_trans">   
+<article class="container_fluid col-12 full_width wrap_vert wrap_hor bgt2" id="wrapper_business_trans">   
     
         <div class="row" >
 
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <h3 class="h3_diensten"> uw Digitale Partner</h3>
-            <h4>subtitle</h4>
-            <p>fesgdrhtjykutrgefdwsdfegrhtyj kujthrgefdw</p>
+            <h3 class="h3_diensten">DIGITALE TRANSFORMATIE</h3><br>
+            <h4>Het nieuwe denken</h4>
+            <p class="diensten_tekst">Er zijn enorm veel nieuwe mogelijkheden in uw bedrijfsproces. Ook de manier waarop u traditioneel gezien waarde levert aan uw klanten is drastisch veranderd. Dit vergt echter een hernieuwde innovatieve denkwijze.</p>
             </div>
 
         </div>
@@ -74,17 +88,17 @@
 
             <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
             <ul>
-                <li>
-                <h5>nummer 1</h5>
-                <p>teksttekstteksergdef erhtgewefrg ewrggefgrth werggrthe etrergthge tgrgtegthre trrgthe regrg</p>
+                <li class="li_dienst">
+                <h5> Strategische Business Models</h5>
+                <p class="diensten_tekst"> 
+                    Wij stroomlijnen uw online presence om uw strategische doelen te behalen. Wij brengen nieuwe manieren in kaart om uw klanten van waarde te voorzien en nieuwe kanalen om omzet te genereren. De nieuwe manier van branding en het gebruik van Social Media speelt hier een centrale rol in.
+                </p>
                 </li><br>
-                <li>
-                <h5>nummer 2</h5>
-                <p>teksttekstteksergdef erhtgewefrg ewrggefgrth werggrthe etrergthge tgrgtegthre trrgthe regrg</p>
-                </li><br>
-                <li>
-                <h5>nummer 3</h5>
-                <p>teksttekstteksergdef erhtgewefrg ewrggefgrth werggrthe etrergthge tgrgtegthre trrgthe regrg</p>
+                <li class="li_dienst">
+                <h5> Innovatieve bedrijfsprocessen</h5>
+                <p class="diensten_tekst">
+                    Wij verwijderen inefficienties uit uw bedrijfsproces door middel van automatisering en innovatie. 
+                </p>
                 </li>
             </ul>
             </div>
@@ -98,15 +112,14 @@
 
     <div class="clearfix"></div>
 </article>
-<hr class="col-centered" style="height: 0.1em; width: 85%; opacity: 0.8;">
 
-<article class="container_fluid col-12 full_width wrap_vert wrap_hor bgt2" id="wrapper_customer_exp">   
+<article class="container_fluid col-12 full_width wrap_vert wrap_hor bgt1" id="wrapper_customer_exp">   
         <div class="row ">
 
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <h3 class="h3_diensten"> uw Digitale Partner</h3>
-            <h4>subtitle</h4>
-            <p>fesgdrhtjykutrgefdwsd fegrhtyjkujthrgefdw</p>
+            <h3 class="h3_diensten">Klantervaring</h3><br>
+            <h4>24/7: De nieuwe Communicatie</h4>
+            <p class="diensten_tekst">Door het internet en met name social media heeft u constant een open lijn om te communiceren met de consument. Met een shift in denkwijze kunt u diepe relaties opbouwen met uw klanten.</p>
             </div>
 
         </div>
@@ -115,17 +128,23 @@
 
             <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
             <ul>
-                <li>
-                <h5>nummer 1</h5>
-                <p>teksttekstteksergdef erhtgewefrg ewrggefgrth werggrthe etrergthge tgrgtegthre trrgthe regrg</p>
+                <li class="li_dienst">
+                <h5>Branding</h5>
+                <p class="diensten_tekst"> 
+                Alles wat u doet wordt voor altijd vastgelegd. Alles wat u doet kan wereldwijd bekeken worden. Uw identiteit is belangrijker dan ooit. Wij begeleiden u in het proces om dit op de juiste manier uit te dragen via de juiste kanalen. 
+                </p>
                 </li><br>
-                <li>
-                <h5>nummer 2</h5>
-                <p>teksttekstteksergdef erhtgewefrg ewrggefgrth werggrthe etrergthge tgrgtegthre trrgthe regrg</p>
+                <li class="li_dienst">
+                <h5>Social Media Content</h5>
+                <p class="diensten_tekst"> 
+                Content genereren staat centraal in het nieuwe communiceren. Wij helpen u uw verhaal over te brengen. Wij adviseren u over wat geschikte content is en via welke kanalen u die content dient te verspreiden.
+                </p>
                 </li><br>
-                <li>
-                <h5>nummer 3</h5>
-                <p>teksttekstteksergdef erhtgewefrg ewrggefgrth werggrthe etrergthge tgrgtegthre trrgthe regrg</p>
+                <li class="li_dienst">
+                <h5>CRM</h5>
+                <p class="diensten_tekst"> 
+                Het doel is om een vertrouwensband op te bouwen met de klant. Dit gebeurt enerzijds door online feedback van klanten te verkrijgen. Anderzijds gebeurt dits door creatieve mogelijkheden aan te grijpen om uw klanten bij beslissingsprocessen van het bedrijf te betrekken. 
+                </p>
                 </li>
             </ul>
             </div>
@@ -140,15 +159,16 @@
     <div class="clearfix"></div>
 </article>
 
-<hr class="col-centered" style="height: 0.1em; width: 85%; opacity: 0.8;">
 
-<article class="container_fluid col-12 full_width wrap_vert wrap_hor bgt1" id="wrapper_gevonden_worden">   
+<article class="container_fluid col-12 full_width wrap_vert wrap_hor bgt2" id="wrapper_gevonden_worden">   
         <div class="row ">
 
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <h3 class="h3_diensten"> uw Digitale Partner</h3>
-            <h4>subtitle</h4>
-            <p>fesgdrhtjykutrgefdwsdfegr htyjkujthrgefdw</p>
+            <h3 class="h3_diensten">Online Marketing</h3><br>
+            <h4>Effectieve marketing</h4>
+            <p class="diensten_tekst"> 
+            Wat doet u tijdens de reclames op tv? Leest u nog wel eens de advertentiies in de kranten? Waarschijnlijk hebben die manieren van adverteren uw aandacht niet meer. Wij zetten advertentiecampagnes op via het internet. 
+            </p>
             </div>
 
         </div>
@@ -157,18 +177,18 @@
 
             <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
             <ul>
-                <li>
-                <h5>nummer 1</h5>
-                <p>teksttekstteksergdef erhtgewefrg ewrggefgrth werggrthe etrergthge tgrgtegthre trrgthe regrg</p>
+                <li class="li_dienst">
+                <h5> Social Media Advertenties</h5>
+                <p class="diensten_tekst"> 
+                De aandacht ligt tegenwoordig bij de mobiele telefoon. Wij zetten campagnes op die daar gebruik van maken.
+                </p>
                 </li><br>
-                <li>
-                <h5>nummer 2</h5>
-                <p>teksttekstteksergdef erhtgewefrg ewrggefgrth werggrthe etrergthge tgrgtegthre trrgthe regrg</p>
+                <li class="li_dienst">
+                <h5>SEO</h5>
+                <p class="diensten_tekst"> 
+                Hoewel de klassieke manieren van SEO hun kracht beginnen te verliezen kunt u nog wel betere searchresults krijgen door een authority te worden. Wij helpen u daarbij.
+                </p>
                 </li><br>
-                <li>
-                <h5>nummer 3</h5>
-                <p>teksttekstteksergdef erhtgewefrg ewrggefgrth werggrthe etrergthge tgrgtegthre trrgthe regrg</p>
-                </li>
             </ul>
             </div>
 
