--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -94,6 +94,18 @@ body {
     margin: 0; 
     padding: 0;
 }
+
+.color1{
+    color: #2f2c2a;
+}
+
+.color2{
+    color: #93404D;
+}
+
+.color3{
+    color: #2C6458;
+}
 /***********************************************************
 ************************************************************
 ***********************************************************
@@ -148,6 +160,10 @@ body {
 .wrap_vert{
     padding-top: 10%;
     padding-bottom: 10%;
+}
+
+.headlines_wrap{
+    padding: 5% 6.5% 5% 6.5%;
 }
 /***********************************************************
 ************************************************************
@@ -301,7 +317,8 @@ h3 {
 }
 
 h4{
-    font-size: 2em;
+    font-size: 1.7em;
+    font-weight: 300;
     font-style: italic;
 }
 
@@ -332,6 +349,7 @@ p{
     letter-spacing: 0.015em;
     font-weight: 200;
     line-height: 1.3em;
+
 }
 
 p.klein{
@@ -342,11 +360,19 @@ p.klein{
 }
 
 
+
+p.diensten_tekst{
+    font-weight: 200; 
+    font-size: 1.5em;
+    margin-top: -0.5em;
+}
+
 p.tekst{
     font-weight: 300;
     font-size: 1.8em;
-    letter-spacing: 0.04em;
+    letter-spacing: 0.025em;
     line-height: 1em;
+    word-spacing: 0.1em;
 }
 
 p.titel_tekst{
@@ -355,6 +381,9 @@ p.titel_tekst{
     letter-spacing: 0.05em;
 }
 
+p.text_shade{
+    font-size: 1.6em;
+}
 
 .contact_p{
     font-size: 1.3em;
@@ -542,13 +571,22 @@ div.black_box:hover{
 ******************************************************
 ******************************************************
 *******************************************************/
-.bgt1{
+.bgt3{
     background-color: #fcfcfb;;
 }
 
-.bgt2{
-    background-color: #fdfdfc;
+.bgt1{
+    background-color:  #fdfbfa;
 }
+
+.bgt2{
+    background-color: #fefdfc;
+}
+
+.bgt4{
+    background-color: #fcf9f7;
+}
+
 
 .overlay_black{
     background-color: black;
@@ -980,7 +1018,6 @@ body{
 }
 
 
-
 .col-dienst{
     padding: 2em 0 2.8em 0;
 }
@@ -1012,6 +1049,24 @@ body{
     font-size: 4.5em;
 }
 
+p.diensten_tekst{
+    font-size: 1.6em;
+}
 
+.headlines_wrap{
+    padding: 10% 0 10% 0;
+}
 
+.headlines{
+    line-height: 1em;
+    padding-left: 10%;
+}
+
+.wrap_hor{
+    padding: 0 7.5% 0 7.5%;
+}
+}
+
+.li_dienst{
+    list-style-type: none;    
 }
