--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -43,7 +43,7 @@
                 <section class="section_diensten">
                 <aside class="aside_dienst"><figure><%= image_tag('as1.png', class: "full_size")%></figure></aside>
                 <h4 class="h4_index">Digital Transformatie</h4>
-                <p class="text_shade klein">Strategic Business Models<br>Social Media Content</p></section>
+                <p class="text_shade klein">Strategische Business Models<br>Innovatieve bedrijfsprocessen</p></section>
 
             </div>
 
@@ -51,7 +51,7 @@
                 <section class="section_diensten">
                     <aside class="aside_dienst"><figure><%= image_tag('as2.png', class: "full_size")%></figure></aside>
                     <h4 class="h4_index">Klant Ervaring</h4>
-                    <p class="text_shade klein">Branding<br>Customer Relationship Management</p></section>
+                    <p class="text_shade klein">Branding<br>Social Media Content<br>Customer Relationship Management</p></section>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col-dienst">
                     <section class="section_diensten">    
