--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -141,7 +141,7 @@
                 </p>
                 </li><br>
                 <li class="li_dienst">
-                <h5>CRM</h5>
+                <h5>Customer Relationship Management</h5>
                 <p class="diensten_tekst"> 
                 Het doel is om een vertrouwensband op te bouwen met de klant. Dit gebeurt enerzijds door online feedback van klanten te verkrijgen. Anderzijds gebeurt dits door creatieve mogelijkheden aan te grijpen om uw klanten bij beslissingsprocessen van het bedrijf te betrekken. 
                 </p>
