--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -32,7 +32,7 @@
                     <p class="blog_preview"><%= article.created_at.strftime("%d %b. %Y") %> - <%= article.consumeTime %> min read</p><br>
                     <p><%=article.content %>
                     <br><br>
-                    <%= link_to 'Lees Meer', article_path(article), class: "lees_meer"%>
+                    <%= link_to 'Lees Meeer', article_path(article), class: "lees_meer"%><br><br>
                     </p>
 
 
