--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -67,7 +67,7 @@
 
 </article>
 
-<article class="container_fluid full_width bgt2" id="wrapper_klant_ervaring">              
+<article class="container_fluid full_width bgt2 h50" id="wrapper_klant_ervaring">              
     
             <figure onmousedown="toggleOverlay()" class="affoe1 pull-left">    
             <%= image_tag('ytIMG.jpg', class: "full_size_img")%>
@@ -87,7 +87,7 @@
 </article>
 
 
-<article class="container_fluid full_width bgt1" id="wrapper_blog">              
+<article class="container_fluid full_width bgt1 h50" id="wrapper_blog">              
     
             <figure class="affoe1 pull-right">
 
@@ -110,7 +110,7 @@
 
 <hr class="col-centered" style="height: 0.1em; width: 85%; opacity: 0.4;">
 
-<article class="container_fluid full_width bgt2" id="wrapper_over_ons">              
+<article class="container_fluid full_width bgt2 h50" id="wrapper_over_ons">              
     
             <figure class="affoe1 pull-left">
 
