--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -38,6 +38,10 @@ body {
     color: red;
 }
 
+.h50{
+    height: 45em;
+}
+
 .h50p1{
     height: 50em;
     z-index: 1;
@@ -991,9 +995,11 @@ iframe{
 
 .affoe1{
     width: 40%;
+    height: inherit;
 }
 
 .affoe2{
+    height: inherit;
     width: 60%;
     vertical-align: middle;
     padding: 10% 10% 10% 10%;
@@ -1022,7 +1028,9 @@ body{
     padding: 2em 0 2.8em 0;
 }
 
-
+.h50{
+    height: auto;
+}
 
 .full_size_img{
     width: 100%;
@@ -1031,6 +1039,7 @@ body{
 
 .affoe1{
     width: 100%;
+    max-height: 50em;
 }
 .affoe2{
     width: 100%;
