--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -692,7 +692,9 @@ iframe{
 ******************************************************
 *******************************************************/
 
-
+.artland{
+    margin-top: 5em;
+}
 
 
 
