--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,7 +4,7 @@
 
 <%= paginate @articles %>
 
-<article class="container_fluid full_width padding-bottom8"> 
+<article class="container_fluid full_width padding-bottom8 artland"> 
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
 <% a=0 %>
