--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -7,7 +7,7 @@
 </div>
 
 
-<article class="container_fluid test_wrap2 padding-bottom8"> 
+<article class="container_fluid test_wrap2 padding-bottom8 artland"> 
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
         <div class="row full_width col-centered">
