--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -1,5 +1,5 @@
 <%= render 'shared/navbar/navbarNormal' %>
-
+<br><br>
 <div id="overlay_video"></div>
 <div id="videoBox">
      <button class="closeBut" onmousedown="toggleOverlay()"><%= image_tag('closeIMG.png', class: "closeIMG")%></button><br>
@@ -7,7 +7,7 @@
 </div>
 
 
-<article class="container_fluid test_wrap2 padding-bottom8 artland"> 
+<article class="container_fluid test_wrap2 padding-bottom8"> 
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
         <div class="row full_width col-centered">
