--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -33,7 +33,7 @@
                     <hr class="article_show_hr">
 
                 <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
-                <figure class="user_avatar"><%= image_tag("mijtest.jpg")%></figure>
+                <figure class="user_avatar"><%= image_tag('mijtest.JPG')%></figure>
                 </div>
 
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-4 pull-right">
