--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,11 +14,11 @@
 
         <div class="row container_home_landing place_middle">
             <div class="col-lg-6 col-md-9 col-sm-10 col-xs-10 col-centered">
-                <h1 class="tagline white">Wij maken de</h1><h1 class="tagline red" id="tagline2">diqitale</h1><h1 class="tagline white">leiders van de toekomst</h1>
+                <h1 class="tagline white">Wij maken de</h1><h1 class="tagline red" id="tagline2">digitale</h1><h1 class="tagline white">leiders van de toekomst</h1>
             </div>
         <div class="col-lg-6 col-md-9 col-sm-10 col-xs-10 col-centered">
                 <p class="white titel_tekst hidden-xs">
-                    Wij van DIQITAL zijn uw partner in uw digitale transformatie. Wij leren bedrijven en mensen master storytellers te zijn, een hechte relatie op te bouwen met online consumenten en strategisch gebruik te maken van alle hulpmiddellen van het online tijdperk.</p>   
+                    Wij van Peonier zijn uw partner in uw digitale transformatie. Wij leren bedrijven en mensen master storytellers te zijn, een hechte relatie op te bouwen met online consumenten en strategisch gebruik te maken van alle hulpmiddellen van het online tijdperk.</p>   
         </div>
 
         <div class="box_home_landing box white_box col-centered"><%= link_to " > ", articles_path, class: "pijl"%><%= link_to "Publicaties", articles_path, class: "link_tekst"%>
