--- a/app/views/shared/navbar/_navbarHome.html.erb
+++ b/app/views/shared/navbar/_navbarHome.html.erb
@@ -3,7 +3,7 @@
 
                     <div class="navbar-header">
                         <ul id="left">
-                        <li class="silverHover"><%=link_to('Diqital', root_path, class: "navbar-brand") %></li>
+                        <li class="silverHover"><%=link_to('Peonier', root_path, class: "navbar-brand") %></li>
                         </ul>
                     </div>
 
