--- a/app/views/shared/navbar/_navbarNormal.html.erb
+++ b/app/views/shared/navbar/_navbarNormal.html.erb
@@ -4,7 +4,7 @@
 
                     <div class="navbar-header">
                         <ul id="left">
-                        <li class="silverHover"><%=link_to('Diqital', root_path, class: "navbar-brand") %></li>
+                        <li class="silverHover"><%=link_to('Peonier', root_path, class: "navbar-brand") %></li>
                         </ul>
                     </div>
                   
