--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -697,6 +697,10 @@ iframe{
 ******************************************************
 *******************************************************/
 
+.npm{
+    padding: 0 0 0 0;
+}
+
 .artland{
     margin-top: 5em;
 }
