--- a/app/views/pages/over_ons.html.erb
+++ b/app/views/pages/over_ons.html.erb
@@ -9,11 +9,18 @@
         <figure class="col-lg-4 col-md-4 col-sm-4 col-xs-12" style="height: inherit; border-style: solid; overflow: hidden;"><%=image_tag('missie.gif')%>
         </figure>
 
-        <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12 container_overons_gm">
+        <div class="col-lg-8 col-md-8 col-sm-8 hidden-xs container_overons_gm">
             <h2 class="inline overonsh3">test1 titel</h2>
             <p class="inline ">test1 tekst</p><br>
             <h2 class="inline overonsh3">test2 titel</h2>
             <p class="inline ">test2 tekst</p>            
+        </div>
+
+        <div class="hidden-lg hidden-md hidden-sm col-xs-12 container_overons_gm">
+            <h2 class="overonsh3">test1 titel</h2>
+            <p> test1 tekst</p><br>
+            <h2 class="overonsh3">test2 titel</h2>
+            <p>test2 tekst</p>            
         </div>
     </div>
 
